Merged compatibilityChecker in compatibilityManager, added attribute configuration and init method in configurator